overflow fix

--- a/frontend/src/style/cmps/_BoardDetails.scss
+++ b/frontend/src/style/cmps/_BoardDetails.scss
@@ -60,8 +60,9 @@
 // }
 
 .stack {
-    background-color: tomato;
     overflow-y: auto;
+    padding: 0 8px;
+    max-height: 60vh;
 }
 
 
@@ -158,7 +159,6 @@
 
 .stack-content {
     background: $clr6;
-    max-height: 98%;
 }
 
 
